--- a/style.css
+++ b/style.css
@@ -97,22 +97,30 @@ h2::after {
     left: 0;
 }
 
-
 /**************/
 /*    Nav     */
 /**************/
+
+.name-navbar {
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    margin-left: 5px;
+}
 
 .navbar {
     padding: 10px;
     position: fixed;
     width: 100%;
-    background-color: #fff;
     z-index: 1;
+    font-weight: bold;
 }
 
 .navbar ul {
     font: "Raleway", sans-serif;
     font-weight: bold;
+    font-size: 20px;
+    color: white;
 }
 
 /*********/
@@ -132,7 +140,7 @@ h2::after {
 }
 
 .intro .overlay {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.12);
 }
 
 .intro h1 {
@@ -147,7 +155,7 @@ h2::after {
 
 .intro p {
     color: #fff;
-    font-size: 22px;
+    font-size: 26px;
     font-weight: 300;
     line-height: 30px;
     margin: 0 auto;
@@ -162,7 +170,7 @@ header .intro-text {
 
 p.intro {
     margin: 12px 0 0;
-    line-height: 24px;
+    line-height: 26px;
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
@@ -290,7 +298,7 @@ p.intro {
 /*CONTACT*/
 /*********/
 
-#contact {
+#contact, nav {
     padding: 100px 0 60px;
     background: linear-gradient(to right, #346fa3 0%, #bce4fb 100%);
     color: rgba(255, 255, 255, 0.75);
@@ -313,11 +321,10 @@ p.intro {
 
 #contact .section-title h2::after {
     position: absolute;
-    background: rgba(255, 255, 255, 0.3);
+    background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
     height: 4px;
-    width: 60px;
+    width: 100%;
     bottom: 0;
-    left: 30px;
 }
 
 #contact h3 {
